--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "laravel-zero/framework": "^8.9",
+        "laravel/forge-sdk": "^3.7",
         "mockery/mockery": "^1.4",
         "nunomaduro/larastan": "^0.7.10",
         "pestphp/pest": "^1.9"
