Refactors PHP Version transformer

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,4 +10,7 @@ parameters:
 
     level: 6
 
+    ignoreErrors:
+        - '#Unsafe usage of new static\(\)#'
+
     checkMissingIterableValueType: false
