--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,19 @@
     "require": {
         "php": "^7.3|^8.0"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./../forge-sdk"
+        }
+    ],
     "require-dev": {
         "laravel-zero/framework": "^8.9",
-        "laravel/forge-sdk": "^3.7",
+        "laravel/forge-sdk": "dev-feat/forge-cli",
         "mockery/mockery": "^1.4",
         "nunomaduro/larastan": "^0.7.10",
         "pestphp/pest": "^1.9",
+        "phpseclib/phpseclib": "^3.0",
         "spatie/once": "^2.2"
     },
     "autoload": {
