--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,9 @@ jobs:
       fail-fast: true
       matrix:
         php: [7.3, 7.4, 8.0]
+        include:
+          - php: '8.1'
+            flags: "--ignore-platform-req=php"
 
     name: PHP ${{ matrix.php }}
 
