Adds `pestphp/pest-plugin` as allowed plugin

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         "sort-packages": true,
         "platform": {
             "php": "7.3"
+        },
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
         }
     },
     "minimum-stability": "dev",
