--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "phpseclib/phpseclib": "^3.0"
     },
     "require-dev": {
-        "laravel-zero/framework": "^8.9",
-        "laravel/forge-sdk": "^3.9",
-        "mockery/mockery": "^1.4",
-        "nunomaduro/larastan": "^1.0",
-        "pestphp/pest": "^1.9",
-        "spatie/once": "^2.2"
+        "laravel-zero/framework": "^9.0",
+        "laravel/forge-sdk": "^3.12",
+        "mockery/mockery": "^1.5",
+        "nunomaduro/larastan": "^2.0",
+        "pestphp/pest": "^1.21",
+        "spatie/once": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -38,7 +38,7 @@
     "config": {
         "sort-packages": true,
         "platform": {
-            "php": "7.3"
+            "php": "8.0.2"
         },
         "allow-plugins": {
             "pestphp/pest-plugin": true
