--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,12 +11,11 @@ on:
 
 jobs:
   tests:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-22.04
 
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-22.04, windows-2019]
         php: [8.1, 8.2]
 
     name: PHP ${{ matrix.php }} - ${{ matrix.os }}
