--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,5 +9,6 @@ parameters:
   level: 5
   ignoreErrors:
     - '#Unsafe usage of new static\(\)#'
+    - '#does not have argument#'
   checkMissingIterableValueType: false
   checkGenericClassInNonGenericObjectType: false
